:art:Added icon and logo  :confetti_ball:

--- a/.gitignore
+++ b/.gitignore
@@ -56,6 +56,13 @@ typings/
 
 # dotenv environment variables file
 .env
+.env.local
+.env.development
+.env.development.local
+.env.test
+.env.test.local
+.env.production
+.env.production.local
 
 # next.js build output
 .next
