--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
       "last 1 safari version"
     ]
   },
+  "homepage" : "https://israel-laguan.github.io/EstimateMyApp/",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Israel-Laguan/EstimateMyApp.git"
